--- a/public/about/index.html
+++ b/public/about/index.html
@@ -46,7 +46,7 @@ Longer Version You can view my resume here. Currently I help run the ABCD Study 
 			</li>
 			
 			<li>
-				<a href="/posts">Posts</a>
+				<a href="/posts">Archives</a>
 			</li>
 			
 			<li>
